# docs/swagger.json
@@ -380,12 +380,7 @@
         },
         "/api/trees/cart": {
             "get": {
-                "security": [
-                    {
-                        "BearerAuth": []
-                    }
-                ],
-                "description": "Возвращает ID черновой заявки и количество элементов в ней",
+                "description": "Возвращает данные корзины для авторизованных пользователей или статические данные для гостей",
                 "produces": [
                     "application/json"
                 ],
@@ -398,12 +393,6 @@
                         "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/handler.TreeCartResponse"
-                        }
-                    },
-                    "401": {
-                        "description": "Unauthorized",
-                        "schema": {
-                            "$ref": "#/definitions/handler.ErrorResponse"
                         }
                     }
                 }
@@ -1388,11 +1377,15 @@
             "properties": {
                 "item_count": {
                     "type": "integer",
-                    "example": 5
+                    "example": 0
                 },
                 "tree_id": {
                     "type": "integer",
-                    "example": 1
+                    "example": 0
+                },
+                "user_id": {
+                    "type": "integer",
+                    "example": -1
                 }
             }
         },
